{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 27,
  "lineage": "a1c620ef-3b99-dc4b-12af-096980911355",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vscode_terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e914068c8b92680",
            "arn": "arn:aws:ec2:sa-east-1:146882035222:instance/i-0865637f1df0d956e",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0865637f1df0d956e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vscode_terraform_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb7cf3be4b583724",
            "private_dns": "ip-10-123-1-213.sa-east-1.compute.internal",
            "private_ip": "10.123.1.213",
            "public_dns": "ec2-18-230-115-11.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.115.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073ecb73d33acc3b4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001fc295351cf088b",
            "tags": {
              "Name": "vscode_terraform_instance"
            },
            "tags_all": {
              "Name": "vscode_terraform_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0aa519c01186b6c8c"
            ]
          },
          "dependencies": [
            "aws_key_pair.vscode_terraform_key_pair",
            "aws_security_group.vscode_terraform_security_group",
            "aws_subnet.vscode_terraform_public_subnet",
            "data.aws_ami.vscode_terraform_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vscode_terraform_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:146882035222:internet-gateway/igw-0afdc510ab21e3b1e",
            "id": "igw-0afdc510ab21e3b1e",
            "owner_id": "146882035222",
            "tags": {
              "Name": "vscode_terraform_internet_gateway"
            },
            "tags_all": {
              "Name": "vscode_terraform_internet_gateway"
            },
            "vpc_id": "vpc-092fa0fa843c4583a"
          },
          "dependencies": [
            "aws_vpc.vscode_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vscode_terraform_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0afdc510ab21e3b1e",
            "id": "r-rtb-0adf148b2ecde2f501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0adf148b2ecde2f50",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vscode_terraform_internet_gateway",
            "aws_route_table.vscode_terraform_route_table",
            "aws_vpc.vscode_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vscode_terraform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:146882035222:route-table/rtb-0adf148b2ecde2f50",
            "id": "rtb-0adf148b2ecde2f50",
            "owner_id": "146882035222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afdc510ab21e3b1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vscode_terraform_route_table"
            },
            "tags_all": {
              "Name": "vscode_terraform_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-092fa0fa843c4583a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vscode_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vscode_terraform_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0956feeb6d764b329",
            "route_table_id": "rtb-0adf148b2ecde2f50",
            "subnet_id": "subnet-001fc295351cf088b"
          },
          "dependencies": [
            "aws_route_table.vscode_terraform_route_table",
            "aws_subnet.vscode_terraform_public_subnet",
            "aws_vpc.vscode_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vscode_terraform_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:146882035222:security-group/sg-0aa519c01186b6c8c",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa519c01186b6c8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "189.78.206.164/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vscode_terraform_security_group",
            "name_prefix": "",
            "owner_id": "146882035222",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092fa0fa843c4583a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vscode_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vscode_terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:146882035222:subnet/subnet-001fc295351cf088b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001fc295351cf088b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146882035222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vscode_terraform_public_subnet"
            },
            "tags_all": {
              "Name": "vscode_terraform_public_subnet"
            },
            "vpc_id": "vpc-092fa0fa843c4583a"
          },
          "dependencies": [
            "aws_vpc.vscode_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vscode_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:146882035222:vpc/vpc-092fa0fa843c4583a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0a039ba344521d269",
            "default_route_table_id": "rtb-0a32870a58cb70a9d",
            "default_security_group_id": "sg-002c90e5596267be7",
            "dhcp_options_id": "dopt-c872e1ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092fa0fa843c4583a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a32870a58cb70a9d",
            "owner_id": "146882035222",
            "tags": {
              "Name": "vscode_terraform"
            },
            "tags_all": {
              "Name": "vscode_terraform"
            }
          }
        }
      ]
    }
  ]
}